--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <header class="header">
             <h2>TIC - TAC - TOE</h2><br>
             <p>Select opponent: <span><button id="cpu-opponent">CPU</button><button id="human-opponent">HUMAN</button>
-            </span><br><br>You are Player 1</p><br><p>Player 1: 0 ---- vs. ----  Player 2: 0</p>
+            </span><br><br></p><br><p>You are Player 1<br><span id="p1">Player 1: 0</span> ---- vs. ---- <span id="p2">Player 2: 0</span></p>
         </header>
         <section class="gamegrid" id="game-grid">
-            <div class="square" id="square1"></div>
-            <div class="square" id="square2"></div>
-            <div class="square" id="square3"></div>
-            <div class="square" id="square4"></div>
-            <div class="square" id="square5"></div>
-            <div class="square" id="square6"></div>
-            <div class="square" id="square7"></div>
-            <div class="square" id="square8"></div>
-            <div class="square" id="square9"></div>
+            <div class="square" id="0"></div>
+            <div class="square" id="1"></div>
+            <div class="square" id="2"></div>
+            <div class="square" id="3"></div>
+            <div class="square" id="4"></div>
+            <div class="square" id="5"></div>
+            <div class="square" id="6"></div>
+            <div class="square" id="7"></div>
+            <div class="square" id="8"></div>
         </section>
     </main>
     <script src=".\scripts.js"></script>
