--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <footer class="header" id="footer">
             <h2>THE WINNER IS:</h2>
             <h1 id="winner-text"></h1><br>
-            <p><button id="new-round">NEW ROUND</button><button id="new-match">RESTART</button></p>            
+            <p><button id="new-match">RESTART</button></p>            
         </footer>               
     </main>
     <script src=".\scripts.js"></script>
